added font family

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+<body class="work-sans-regular">
     <header>
-
+        <nav class="nav-bar">
+            <h3 class="brand-name">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
