first page complit

--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="work-sans-regular">
-    <header>
-        <nav class="nav-bar">
+    <header class="bg-color">
+        <nav class="nav-bar display-flex">
             <h3 class="brand-name">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                                                
+                <li class="nav-items"><a href="" class="nav-link dark-tow"> Home</a></li>
+                <li class="nav-items"><a href="" class="nav-link dark-tow"> About</a></li>
+                <li class="nav-items"><a href="" class="nav-link dark-tow">Contact Us </a></li>
+                <li class="nav-items"><a href="" class="nav-link dark-tow">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">Brand NewGroup of Architects</h3>
+                <p class="banner-des dark-three">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="" class="banner-img">
+        </div>
     </header>
     <main>
 
