--- a/index.html
+++ b/index.html
@@ -28,7 +28,58 @@
         </div>
     </header>
     <main>
+        <section class="team display-flex">
+            <div class="img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
 
+            </div>
+            <div class="future-container">
+                <h3 class="future-title"> <span class="dark-three quick">Quick list</span> <span class="dark-tow">of Our</span><span class="future-color"> Features</span></h3>
+                <p class="future-des dark-three">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <section class="some-fact">
+            <div class="fact-container">
+                <div class="fact-title">
+                <h4>Some Facts</h4>
+            </div>
+            <p class="fact-des dark-three">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="facts-section">
+                <div class="fact display-flex">
+                   <div>
+                     <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                   </div>
+                </div>
+                <div class="fact display-flex">
+                   <div>
+                     <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1455</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                   </div>
+                </div>
+                <div class="fact display-flex">
+                   <div>
+                     <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">560</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                   </div>
+                </div>
+                <div class="fact display-flex">
+                   <div>
+                     <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1550</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                   </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
