made card section responsive

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </header>
     <main>
+        <!-- first section -->
         <section class="team display-flex">
             <div class="img-container">
                 <img src="images/team1.png" alt="">
@@ -42,6 +43,7 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- some fact -->
         <section class="some-fact">
             <div class="fact-container">
                 <div class="fact-title">
