adding the sponsor page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
                 </div>
             </div>
         </section>
+        <section class="our-sponsor">
+            <div class="section-info">
+                <h3 class="sp-title">
+                    Our Sponspors
+                </h3>
+                <p class="dark-three sp-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sp-compeney">
+
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+               
+            </div>
+        </section>
     </main>
     <footer>
 
